--- a/projetos/templates/projetos/selecao_propostas.html
+++ b/projetos/templates/projetos/selecao_propostas.html
@@ -11,7 +11,7 @@
 {% block content %}
 
     {% if vencido %}
-      <h2 class="red-bold">Você não está cadastrado como aluno.</h2>
+      <h2 class="red-bold">Você não está cadastrado como estudante.</h2>
     {% else %}
 
       {% if ano != user.aluno.anoPFE or semestre != user.aluno.semestrePFE %}
