--- a/templates/proposta.html
+++ b/templates/proposta.html
@@ -26,7 +26,7 @@
     {% endif %}
 
     {% if proposta.internacional %}
-        <strong style="color:red">Proposta Internaciona de Projeto, a comunicação do projeto será em inglês.</strong><br>
+        <strong style="color:red">Proposta Internacional de Projeto, a comunicação do projeto será em inglês.</strong><br>
     {% endif %}
 
     <br>
