--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -33,7 +33,7 @@
 
     {% url 'index' as url_index %}
     {% url 'index_professor' as url_index_professor %}
-    {% url 'index_aluno' as url_index_aluno %}
+    {% url 'index_estudante' as url_index_estudante %}
     {% url 'perfil' as url_perfil %}
   
     <div class="topnav">
@@ -61,7 +61,7 @@
 
           <a href="{% url 'index'%}">Geral</a>
           
-          <a href="{% url 'index_aluno'%}">Aluno</a>
+          <a href="{% url 'index_estudante'%}">Estudante</a>
 
           {% if perms.users.altera_professor %}
           <a href="{% url 'index_professor'%}">Professor</a>
