--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   {% load static %}
+  {% load dictionary %}
   {% load aderencia_aluno %}
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>
@@ -70,84 +71,104 @@
     {% endfor %}
   </select>
 
-  {% if propostas %}
-    <table id="MapeamentoTable">
-      <tr>
-        <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="bottom">Estudante</th>
-        <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="bottom">Eng</th>
-        <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="bottom">CR</th>
-        {% for proposta in propostas %}   
-          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child({{ forloop.counter|add:"3" }})')" style="cursor:pointer;
-          {% if not proposta.disponivel %}color:lightgray;{% endif %}"
-          class="rotate">
-            <div>
-              <span>
-                {% if proposta.organizacao %}
-                  {{proposta.organizacao.sigla}}
-                {% else %}
-                  {{proposta.nome_organizacao}}
-                {% endif %}
-              </span>
-            </div>
-          </th>
-        {% endfor %}
-      </tr>      
-      {% for estudante,opcoes in estudantes %} 
-        <tr class="item">
-          <td style="text-align:right">
-            <a href="{% url 'aluno_detail' estudante.id %}">
-              {{estudante.user.get_full_name}}
-            </a>
-          </td>
-          <td style="text-align:center">
-            <a href="{% url 'aluno_detail' estudante.id %}">
-              {{estudante.curso}}
-            </a>
-          </td>
-          <td style="text-align:left;border-right: 2px solid black;">
-            <a href="{% url 'aluno_detail' estudante.id %}">
-              {{estudante.cr|floatformat:4}}
-            </a>
-          </td>
-          {% for opcao in opcoes %}
-            {% if opcao %}
-              <td style="text-align:center;
-                  {% with alocacoes=estudante.alocacao_set %}
-                    {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
-                      background-color:pink;
+  &nbsp;&nbsp;
+
+  <b>Informações: </b>&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(2)').show() : $('#MapeamentoTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Engenharia</label>&nbsp;&nbsp;&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(3)').show() : $('#MapeamentoTable tr > *:nth-child(3)').hide())" type="checkbox"         /> CR</label>&nbsp;&nbsp;&nbsp;
+  
+  <div id="tabela">
+
+    {% if propostas %}
+      <table id="MapeamentoTable">
+        <tr>
+          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="bottom">Estudante</th>
+          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="bottom">Eng</th>
+          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="bottom">CR</th>
+          {% for proposta in propostas %}   
+            <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child({{ forloop.counter|add:"3" }})')" style="cursor:pointer;
+            {% if not proposta.disponivel %}color:lightgray;{% endif %}"
+            class="rotate">
+              <div>
+                <span>
+                  {% if proposta.organizacao %}
+                    {{proposta.organizacao.sigla}}
+                    {% if proposta.id in proposta_indice %}
+                      <sup>{{ proposta_indice|get_value:proposta.id }}</sup>
                     {% endif %}
-                  {% endwith %}"
-                  class="{% if opcao.prioridade == 0 %}red-bold{% elif opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
-                <a class="prioridade" href="{% url 'proposta_completa' opcao.proposta.id %}"
-                  data-toggle="tooltip" data-html="true" animation="true" title="
-                  {{ opcao.proposta.titulo }}
-                  "
-                >
-                  {% if opcao.prioridade == 0 %}
-                    X
                   {% else %}
-                    {{opcao.prioridade}}
+                    {{proposta.nome_organizacao}}
                   {% endif %}
-                </a>
-              </td>
-            {% else %}
-              <td>&nbsp;</td>
-            {% endif %}
+                </span>
+              </div>
+            </th>
           {% endfor %}
-        </tr>
+        </tr>      
+        {% for estudante,opcoes in estudantes %} 
+          <tr class="item">
+            <td style="text-align:right">
+              <a href="{% url 'aluno_detail' estudante.id %}">
+                {{estudante.user.get_full_name}}
+              </a>
+            </td>
+            <td style="text-align:center">
+              <a href="{% url 'aluno_detail' estudante.id %}">
+                {{estudante.curso}}
+              </a>
+            </td>
+            <td style="text-align:left;border-right: 2px solid black;">
+              <a href="{% url 'aluno_detail' estudante.id %}">
+                {{estudante.cr|floatformat:4}}
+              </a>
+            </td>
+            {% for opcao in opcoes %}
+              {% if opcao %}
+                <td style="text-align:center;
+                    {% with alocacoes=estudante.alocacao_set %}
+                      {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
+                        background-color:pink;
+                      {% endif %}
+                    {% endwith %}"
+                    class="{% if opcao.prioridade == 0 %}red-bold{% elif opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
+                  <a class="prioridade" href="{% url 'proposta_completa' opcao.proposta.id %}"
+                    data-toggle="tooltip" data-html="true" animation="true" title="
+                    {{ opcao.proposta.titulo }} ({{ opcao.proposta.organizacao.sigla }})
+                    "
+                  >
+                    {% if opcao.prioridade == 0 %}
+                      X
+                    {% else %}
+                      {{opcao.prioridade}}
+                    {% endif %}
+                  </a>
+                </td>
+              {% else %}
+                <td>&nbsp;</td>
+              {% endif %}
+            {% endfor %}
+          </tr>
+        {% endfor %}
+      </table>
+    {% else %}
+      <p>Não existem propostas de projetos disponíveis.</p>
+    {% endif %}
+
+    <script>
+      {% for proposta in propostas %}
+        {% if not proposta.disponivel %}  
+          $('table td:nth-child({{ forloop.counter|add:"3" }})').css('border','dotted 2px gray');
+        {% endif %}
       {% endfor %}
-    </table>
-  {% else %}
-    <p>Não existem propostas de projetos disponíveis.</p>
-  {% endif %}
+    </script>
+
+  </div>
+
+  <small style="font-size:12px"><b>C</b>: Computação | <b>X</b>: Mecatrônica | <b>M</b>: Mecânica</small>
   <p>&nbsp;</p>
 
   <script>
-    {% for proposta in propostas %}
-      {% if not proposta.disponivel %}  
-        $('table td:nth-child({{ forloop.counter|add:"3" }})').css('border','dotted 2px gray');
-      {% endif %}
-    {% endfor %}
+    $('#MapeamentoTable tr td:nth-child(4)').css('border-left','3px solid black');
+    $('#MapeamentoTable tr > *:nth-child(3)').hide();
   </script>
 
 {% endblock %}
