--- a/projetos/templates/projetos/propostas_lista.html
+++ b/projetos/templates/projetos/propostas_lista.html
@@ -66,13 +66,18 @@
 		}
 
 		text.tick-text {
-			font-family: "sans-serif";
+			font-family: "arial";
 			font-size: 10px;
-			fill: #000000;
+      fill-opacity:1;
+      stroke-width:1px;
+      stroke-linecap:butt;
+      stroke-linejoin:miter;
+      stroke-opacity:1;
+      font-weight: 800;
 		}
 
     text.tick-text2 {
-			font-family: "sans-serif";
+			font-family: "arial";
 			font-size: 14px;
 			fill: #000000;
 		}
@@ -446,7 +451,7 @@
         .text("Mecânica")
         .classed('tick-text tick-c', true);
 
-svg.append("circle")
+  svg.append("circle")
 		.attr("cx", 70)
 		.attr("cy", 317)
     .attr("r", 7)
@@ -533,7 +538,7 @@ svg.append("circle")
              .text( function (d) { return v; })
              .classed('tick-text tick-c', true);
 
-	})
+	  })
 
     dados_aprovados = [
       {% for ter in ternario_aprovados %}
@@ -547,53 +552,53 @@ svg.append("circle")
       {% endfor %} 
     ]
 
-	var circles_aprovados = svg.selectAll("circle").data(dados_aprovados);
+	  var circles_aprovados = svg.selectAll("circle_a").data(dados_aprovados);
 
-	circles_aprovados.enter().append("circle")
-		.attr("cx", function (d) { return d[0]; })
-		.attr("cy", function (d) { return d[1]; })
-    .attr("r", function (d) { return d[2]; })
-    .attr("fill", "teal");
-    
-  circles_aprovados.enter().append("text")
-    .attr("x", function (d) { return d[0]+d[2]; })
-		.attr("y", function (d) { return d[1]-d[2]; })
-    .text( function (d) { return d[3]; })
-    .classed('tick-text tick-p', true);
+    circles_aprovados.enter().append("circle")
+      .attr("cx", function (d) { return d[0]; })
+      .attr("cy", function (d) { return d[1]; })
+      .attr("r", function (d) { return d[2]; })
+      .attr("fill", "teal");
+      
+    circles_aprovados.enter().append("text")
+      .attr("x", function (d) { return d[0]+d[2]; })
+      .attr("y", function (d) { return d[1]-d[2]; })
+      .text( function (d) { return d[3]; })
+      .classed('tick-text tick-p', true);
 
-	var circles_pendentes = svg.selectAll("circle_p").data(dados_pendentes);
+    var circles_pendentes = svg.selectAll("circle_p").data(dados_pendentes);
 
-	circles_pendentes.enter().append("circle")
-		.attr("cx", function (d) { return d[0]; })
-		.attr("cy", function (d) { return d[1]; })
-    .attr("r", function (d) { return d[2]; })
-    .attr("fill", "brown");
-    
-  circles_pendentes.enter().append("text")
-    .attr("x", function (d) { return d[0]+d[2]; })
-		.attr("y", function (d) { return d[1]+7+(d[2]/2); })
-    .text( function (d) { return d[3]; })
-    .classed('tick-text tick-y', true);
+    circles_pendentes.enter().append("circle")
+      .attr("cx", function (d) { return d[0]; })
+      .attr("cy", function (d) { return d[1]; })
+      .attr("r", function (d) { return d[2]; })
+      .attr("fill", "brown");
+      
+    circles_pendentes.enter().append("text")
+      .attr("x", function (d) { return d[0]+d[2]; })
+      .attr("y", function (d) { return d[1]+7+(d[2]/2); })
+      .text( function (d) { return d[3]; })
+      .classed('tick-text tick-y', true);
 
 
-	function coord(a, b, c, r, t){
-		var sum, pos = [0,0];
-	    sum = a + b + c;
-	    if(sum !== 0) {
-		    a /= sum;
-		    b /= sum;
-		    c /= sum;
+    function coord(a, b, c, r, t){
+      var sum, pos = [0,0];
+        sum = a + b + c;
+        if(sum !== 0) {
+          a /= sum;
+          b /= sum;
+          c /= sum;
 
-			pos[0] =  corners[0][0]  * a + corners[1][0]  * b + corners[2][0]  * c;
-			pos[1] =  corners[0][1]  * a + corners[1][1]  * b + corners[2][1]  * c;
-            pos[2] = r;
-            pos[3] = t;
-		}
-	    return pos;
-	}
-	function scale(/* point */ p, factor) {
-	    return [p[0] * factor, p[1] * factor];
-	}
+        pos[0] =  corners[0][0]  * a + corners[1][0]  * b + corners[2][0]  * c;
+        pos[1] =  corners[0][1]  * a + corners[1][1]  * b + corners[2][1]  * c;
+        pos[2] = r;
+        pos[3] = t;
+      }
+        return pos;
+    }
+    function scale(/* point */ p, factor) {
+        return [p[0] * factor, p[1] * factor];
+    }
   })()
 
   </script>
