--- a/projetos/templates/projetos/exportar.html
+++ b/projetos/templates/projetos/exportar.html
@@ -7,6 +7,31 @@
 
 {% block content %}
 
+    <span class="titulo">Relatórios</span>
+    <br>
+
+    <table>
+        <tr>
+            <td>Projetos</td>
+            <td><a href="{% url 'relatorio' 'projetos' 'HTML'%}">HTML</a></td>
+            <td><a href="{% url 'relatorio' 'projetos' 'PDF'%}">PDF</a></td>
+        </tr>
+        <tr>
+            <td>Estudantes</td>
+            <td><a href="{% url 'relatorio' 'alunos' 'HTML'%}">HTML</a></td>
+            <td><a href="{% url 'relatorio' 'alunos' 'PDF'%}">PDF</a></td>
+        </tr>
+        <tr>
+            <td>Feedbacks</td>
+            <td><a href="{% url 'relatorio' 'feedbacks' 'HTML'%}">HTML</a></td>
+            <td><a href="{% url 'relatorio' 'feedbacks' 'PDF'%}">PDF</a></td>
+        </tr>
+    </table>
+    <a href="{% url 'relatorio_backup'%}">Envia e-mail com todos os relatórios</a>
+    <br>
+    <br>
+    <br>
+
     <span class="titulo">Exportar dados</span>
     <br>
 
