--- a/projetos/templates/projetos/bancas_criar.html
+++ b/projetos/templates/projetos/bancas_criar.html
@@ -59,6 +59,33 @@
         <label for="fim">Fim:</label> <input id="fim" type = "datetime-local" name="fim">
       </div><br>
 
+      <script>
+        // https://webreflection.medium.com/using-the-input-datetime-local-9503e7efdce
+        Date.prototype.toDatetimeLocal =
+          function toDatetimeLocal() {
+            var
+              date = this,
+              ten = function (i) {
+                return (i < 10 ? '0' : '') + i;
+              },
+              YYYY = date.getFullYear(),
+              MM = ten(date.getMonth() + 1),
+              DD = ten(date.getDate()),
+              HH = ten(date.getHours()),
+              II = ten(date.getMinutes()),
+              SS = ten(date.getSeconds())
+            ;
+            return YYYY + '-' + MM + '-' + DD + 'T' +
+                    HH + ':' + II + ':' + SS;
+          };
+
+        $("#inicio").change(function() {
+          var data = new Date($(this).val());
+          data.setHours(data.getHours() + 2);
+          $("#fim").val(data.toDatetimeLocal());
+        });
+      </script>
+
       <label for="local">Local:</label> <input id="local" name="local" type="text" size="48"/><br>
       <br>
 
