melhor comportamento para resetar alocações

--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -117,7 +117,7 @@
 
   <hr>
   <form action="" method="post"> {% csrf_token %}  
-    <input type="submit" name="limpar" value="Limpar Pré Alocações">
+    <input type="submit" name="limpar" value="Resetar Pré Alocações">
     <input type="submit" name="fechar" value="Fechar Projetos">
   </form>
 
