--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -39,6 +39,7 @@
     <option value="2019.2" {% if periodo == "2019.2" %}selected="selected"{% endif %}>2019.2</option>
     <option value="2020.1" {% if periodo == "2020.1" %}selected="selected"{% endif %}>2020.1</option>
     <option value="2020.2" {% if periodo == "2020.2" %}selected="selected"{% endif %}>2020.2</option>
+    <option value="2021.1" {% if periodo == "2021.1" %}selected="selected"{% endif %}>2021.1</option>
   </select>
   <br><br><br>
   
