--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -30,18 +30,18 @@
 
   <span class="titulo">Projetos Fechados</span>
   <br>
-  
-  <label for="filter">Edição:</label>
-  <select id="filter" class="filter" data-tableId="projetos">
-    <option value="todas">todas</option>
-    <option value="2018.2" {% if periodo == "2018.2" %}selected="selected"{% endif %}>2018.2</option>
-    <option value="2019.1" {% if periodo == "2019.1" %}selected="selected"{% endif %}>2019.1</option>
-    <option value="2019.2" {% if periodo == "2019.2" %}selected="selected"{% endif %}>2019.2</option>
-    <option value="2020.1" {% if periodo == "2020.1" %}selected="selected"{% endif %}>2020.1</option>
-    <option value="2020.2" {% if periodo == "2020.2" %}selected="selected"{% endif %}>2020.2</option>
-    <option value="2021.1" {% if periodo == "2021.1" %}selected="selected"{% endif %}>2021.1</option>
+
+  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  <label id="labelEdicao" for="filterEdicao"><b>Edição:</b></label>
+  <select class="filter" id="filterEdicao" data-tableId="projetos">
+      <option value="todas">todas</option>
+      {% for loop in loop_anos %}
+          <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
+          <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
+      {% endfor %}
   </select>
-  <br><br><br>
+  &nbsp;&nbsp;
+  <br><br>
   
   {% if mylist %}
     <table id="projetos">
