--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -75,7 +75,7 @@
 {% block content %}
 
   {% if mensagem %}
-    <h2 class="red-bold">{{mensagem}}</h2>
+    <h2 class="red-bold">{{mensagem|linebreaks}}</h2>
     <br>
   {% endif %}
 
