--- a/projetos/templates/projetos/selecionar_orientadores.html
+++ b/projetos/templates/projetos/selecionar_orientadores.html
@@ -17,7 +17,7 @@
 {% block content %}
 
   {% if mensagem %}
-    <h2 class="red-bold">{{mensagem}}</h2>
+    <h2 class="red-bold">{{mensagem|linebreaks}}</h2>
     <br>
   {% endif %}
 
