--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -6,13 +6,12 @@
 {% endcomment %}
 
 {% block head %}
+
   {% load static %}
   {% load aderencia_aluno %}
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  
+  {% comment %} Para chamar os Tooltips {% endcomment %}
+  <script src="{% static 'js/tooltip.js' %}"/></script>
   
   <style>
 
