--- a/projetos/templates/projetos/tabela_documentos.html
+++ b/projetos/templates/projetos/tabela_documentos.html
@@ -6,14 +6,13 @@
 {% endcomment %}
 
 {% block head %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+
+  {% load static %}
+
   <script src="{% static 'js/w3.js' %}"></script>
 
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  {% comment %} Para chamar os Tooltips {% endcomment %}
+  <script src="{% static 'js/tooltip.js' %}"/></script>
 
 {% endblock %}
 
