--- a/projetos/templates/projetos/bancas_tabela.html
+++ b/projetos/templates/projetos/bancas_tabela.html
@@ -6,13 +6,9 @@
 {% endcomment %}
 
 {% block head %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+  {% load static %}
   <script src="{% static 'js/w3.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  <script src="{% static 'js/tooltip.js' %}"/></script>
 {% endblock %}
 
 {% block content %}
