--- a/projetos/templates/projetos/conceitos_obtidos.html
+++ b/projetos/templates/projetos/conceitos_obtidos.html
@@ -6,6 +6,7 @@
 {% endcomment %}
 
 {% block head %}
+  {% load static %}
   {% load rubricas %}
 
   <style>
@@ -26,11 +27,8 @@
     tr:nth-child(even) {background-color: #f2f2f2;}
   </style>
 
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  <script src="{% static 'js/tooltip.js' %}"/></script>
+
   <script>
 
     function conceito(nota) {
