--- a/projetos/templates/projetos/coorientadores_tabela.html
+++ b/projetos/templates/projetos/coorientadores_tabela.html
@@ -7,13 +7,8 @@
 
 {% block head %}
   {% load static %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
   <script src="{% static 'js/w3.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  <script src="{% static 'js/tooltip.js' %}"/></script>
 {% endblock %}
 
 {% block content %}
