--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -7,16 +7,12 @@
 
 {% block head %}
   {% load static %}
-  <script src="{% static 'js/Chart.min.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+  {% comment %} Para desenhar gráficos na página {% endcomment %}
+  <script src="{% static 'js/Chart.min.js' %}"/></script>
   <style>
-    .prioridade {display: inline}
-  </style>
-  <style>
+    .prioridade {
+      display: inline
+    }
     .logotipo_left {
       max-height:64px;
       max-width:128px;
@@ -27,133 +23,144 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Projetos Fechados</span>
-  <br>
-
+  <span class="titulo">Projetos Fechados</span><br>
+  
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   <label id="labelEdicao" for="filterEdicao"><b>Edição:</b></label>
   <select class="filter" id="filterEdicao" data-tableId="projetos">
       <option value="todas">todas</option>
-      {% for loop in loop_anos %}
-          <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
-          <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
+      {% for edicao in edicoes %}
+          <option value="{{edicao}}" {% if forloop.last %}selected{% endif %}>{{edicao}}</option>
       {% endfor %}
   </select>
-  &nbsp;&nbsp;
   <br><br>
   
-  {% if mylist %}
-    <table id="projetos">
-    {% for projeto, prioridades, conexoes in mylist %} 
-      <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
-      {% if projeto.organizacao.logotipo %}
-        <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-          <img class="logotipo_left" src="{{ projeto.organizacao.logotipo.url }}" alt="{{ projeto.organizacao.sigla }}">
-        </a>
-      {% endif %}
-      {% for conexao in conexoes %}
-        {% if conexao.parceiro and conexao.parceiro.organizacao and conexao.parceiro.organizacao.logotipo %}
-          &nbsp;
-          <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
-            <img class="logotipo_left" src="{{ conexao.parceiro.organizacao.logotipo.url }}" alt="{{ conexao.parceiro.organizacao.sigla }}">
+  {% comment %} Tabela com todos os projetos selecionados pelo filtro {% endcomment %}
+  <div class="projetos">
+    
+    {% if projetos %}
+      <table id="projetos">
+      {% for projeto, prioridades, conexoes in projetos %} 
+        <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
+        {% if projeto.organizacao.logotipo %}
+          <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
+            <img class="logotipo_left" src="{{ projeto.organizacao.logotipo.url }}" alt="{{ projeto.organizacao.sigla }}">
           </a>
         {% endif %}
-      {% endfor %}
-      <br>
-      <a href="{% url 'projeto_completo' projeto.id %}" class="dark-blue-bold"> 
-        {% if projeto.titulo_final %}
-          {{projeto.titulo_final}}<br>
-          <small>Título Provisório: {{projeto.titulo}}</small><br>
-        {% else %}
-          {{projeto.titulo}}<br>
-        {% endif %}
-      </a>
-      {% if projeto.descricao %}
-        <small>Descrição projeto: {{projeto.descricao}}</small><br>
-      {% else %}
-        <small>Descrição proposta: {{projeto.proposta.descricao}}</small><br>
-      {% endif %}
-      <p style="margin-left:1em;">Organização: <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-        {{ projeto.organizacao.nome }}
-      </a>
-      {% for conexao in conexoes %}
-        {% if conexao.parceiro and conexao.parceiro.organizacao %}
-          &nbsp;&nbsp;&nbsp;&nbsp;colaboração:
-          <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
-            {{ conexao.parceiro.organizacao.nome }}
-          </a>
-        {% endif %}
-      {% endfor %}
-      </p>
-      {% if projeto.avancado %}
-        <p style="margin-left:1em;">Tipo: <font color="red">PFE Avançado</font></p>
-      {% endif %}
-      <!-- <p style="margin-left:1em;">Edição: {{projeto.ano}}.{{projeto.semestre}}</p> -->
-      <p style="margin-left:1em;">Orientador: 
-        {% if projeto.orientador %}
-          <a href="{% url 'professor_detail' projeto.orientador.id %}"> {{projeto.orientador.user.get_full_name}}</a>
-          <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
-        {% else %}
-          Não definido
-        {% endif %}
-      </p>
-      <p style="margin-left:1em;">Estudantes:</p>
-      <ol>
-      {% for aluno,prioridade in prioridades %}
-        <li><a href="{% url 'aluno_detail' aluno.id %}"
-            data-toggle="tooltip" data-html="true" animation="true" title="
-            {% if prioridade == 0 %}
-              prioridade não definida
-            {% else %}
-              prioridade #{{prioridade}}
-            {% endif %}">
-            {{aluno.user.get_full_name}}
+        {% for conexao in conexoes %}
+          {% if conexao.parceiro and conexao.parceiro.organizacao and conexao.parceiro.organizacao.logotipo %}
+            &nbsp;
+            <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
+              <img class="logotipo_left" src="{{ conexao.parceiro.organizacao.logotipo.url }}" alt="{{ conexao.parceiro.organizacao.sigla }}">
             </a>
-            <a href="mailto:{{aluno.user.email}}">&lt;{{aluno.user.email}}&gt;</a>
-            [{{ aluno.get_curso_display }}]
-            <div class="prioridade" style="display: none;">{{prioridade}}</div> <!-- para mostrar no gráfico -->
-            <!-- &nbsp; { {{ aluno.alocacao_set.first.get_conceito_display }} } -->
-        </li>
+          {% endif %}
+        {% endfor %}
+        <br>
+        <a href="{% url 'projeto_completo' projeto.id %}" class="dark-blue-bold"> 
+          {% if projeto.titulo_final %}
+            {{projeto.titulo_final}}<br>
+            <small>Título Provisório: {{projeto.titulo}}</small><br>
+          {% else %}
+            {{projeto.titulo}}<br>
+          {% endif %}
+        </a>
+        {% if projeto.descricao %}
+          <small>Descrição projeto: {{projeto.descricao}}</small><br>
+        {% else %}
+          <small>Descrição proposta: {{projeto.proposta.descricao}}</small><br>
+        {% endif %}
+        <p style="margin-left:1em;">Organização: <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
+          {{ projeto.organizacao.nome }}
+        </a>
+        {% for conexao in conexoes %}
+          {% if conexao.parceiro and conexao.parceiro.organizacao %}
+            &nbsp;&nbsp;&nbsp;&nbsp;colaboração:
+            <a href="{% url 'organizacao_completo' conexao.parceiro.organizacao.id %}">
+              {{ conexao.parceiro.organizacao.nome }}
+            </a>
+          {% endif %}
+        {% endfor %}
+        </p>
+        {% if projeto.avancado %}
+          <p style="margin-left:1em;">Tipo: <font color="red">PFE Avançado</font></p>
+        {% endif %}
+        <!-- <p style="margin-left:1em;">Edição: {{projeto.ano}}.{{projeto.semestre}}</p> -->
+        <p style="margin-left:1em;">Orientador: 
+          {% if projeto.orientador %}
+            <a href="{% url 'professor_detail' projeto.orientador.id %}"> {{projeto.orientador.user.get_full_name}}</a>
+            <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
+          {% else %}
+            Não definido
+          {% endif %}
+        </p>
+        <p style="margin-left:1em;">Estudantes:</p>
+        <ol>
+        {% for aluno,prioridade in prioridades %}
+          <li><a href="{% url 'aluno_detail' aluno.id %}"
+              data-toggle="tooltip" data-html="true" animation="true" title="
+              {% if prioridade == 0 %}
+                prioridade não definida
+              {% else %}
+                prioridade #{{prioridade}}
+              {% endif %}">
+              {{aluno.user.get_full_name}}
+              </a>
+              <a href="mailto:{{aluno.user.email}}">&lt;{{aluno.user.email}}&gt;</a>
+              [{{ aluno.get_curso_display }}]
+              <div class="prioridade" style="display: none;">{{prioridade}}</div> <!-- para mostrar no gráfico -->
+              <!-- &nbsp; { {{ aluno.alocacao_set.first.get_conceito_display }} } -->
+          </li>
+        {% endfor %}
+        </ol>
+        <br>
+        </td></tr>
       {% endfor %}
-      </ol>
-      <br>
-      </td></tr>
-    {% endfor %}
-    </table>
+      </table>
 
-    <hr>
-    <b>Total de projetos = <span id="myCountProj">{{ length }}</span> </b> <br>
-    <b>Total de estudantes = <span id="myCountAlun">{{ nalunos }}</span> </b> <br>    
+      <hr>
+      <b>Total de projetos = <span id="myCountProj">{{ numero_projetos }}</span> </b> <br>
+      <b>Total de estudantes = <span id="myCountAlun">{{ numero_estudantes }}</span> </b> <br>    
+      <br><br>
+
+      <div id="canvas-holder">
+        <canvas id="chart-area"></canvas>
+      </div>
+
+    {% else %}
+      <p>Não existem projetos disponíveis.</p>
+    {% endif %}
+
     <br><br>
+    
+    <script type="text/javascript">
 
-    <div id="canvas-holder">
-      <canvas id="chart-area"></canvas>
-    </div>
+      function carrega_pagina(){
+        filtra_data();
+        mostra_grafico();
+        $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();
+        });
+      }
 
-  {% else %}
-    <p>Não existem projetos disponíveis.</p>
-  {% endif %}
+      window.onload = carrega_pagina
 
-  <br>
-  <br>
+      var count_projects = 0;
+      var count_alunos = 0;
+      var prioridade1 = 0;
+      var prioridade2 = 0;
+      var prioridade3 = 0;
+      var prioridade4 = 0;
+      var prioridade5 = 0;
+      var prioridade6m = 0;
+      var nao_definido = 0;
 
-  <script type="text/javascript">
+    </script>
 
-    var count_projects = 0;
-    var count_alunos = 0;
-    var prioridade1 = 0;
-    var prioridade2 = 0;
-    var prioridade3 = 0;
-    var prioridade4 = 0;
-    var prioridade5 = 0;
-    var prioridade6m = 0;
-    var nao_definido = 0;
+  </div>
+
+  <script>
 
     function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
-      var filterValue = $('.filter').val();
-      var row = $('.row'); 
-      row.hide();
 
       count_projects = 0;
       count_alunos = 0;
@@ -165,29 +172,27 @@
       prioridade6m = 0;
       nao_definido = 0;
 
+      var row = $('.row'); 
       row.each(function(i, el) {
-        
-        if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
-            $(el).show();
-            count_projects = count_projects + 1;
-            var alunos = $(el).find("TD").find("OL");
-            count_alunos = count_alunos + alunos.children().length;
 
-            $.each(alunos.children('li'), function() {
-              var target = $(this)
-              data = $(target).find('div.prioridade').text();
-              if(data == 1) {prioridade1 += 1;}
-              else if(data == 2) {prioridade2 += 1;}
-              else if(data == 3) {prioridade3 += 1;}
-              else if(data == 4) {prioridade4 += 1;}
-              else if(data == 5) {prioridade5 += 1;}
-              else if(data > 5) {prioridade6m += 1;}
-              else {nao_definido +=1;}
-            });
-        }
+        count_projects = count_projects + 1;
+        var alunos = $(el).find("TD").find("OL");
+        count_alunos = count_alunos + alunos.children().length;
+
+        $.each(alunos.children('li'), function() {
+          var target = $(this)
+          data = $(target).find('div.prioridade').text();
+          if(data == 1) {prioridade1 += 1;}
+          else if(data == 2) {prioridade2 += 1;}
+          else if(data == 3) {prioridade3 += 1;}
+          else if(data == 4) {prioridade4 += 1;}
+          else if(data == 5) {prioridade5 += 1;}
+          else if(data > 5) {prioridade6m += 1;}
+          else {nao_definido +=1;}
+        });
+
       });
-      document.getElementById("myCountProj").innerHTML = count_projects;
-      document.getElementById("myCountAlun").innerHTML = count_alunos;
+
     }
 
     function mostra_grafico() { // REFERENTE AO PIE CHART
@@ -239,22 +244,31 @@
           }
         }
       };
-      
-      var ctx = document.getElementById('chart-area').getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie = new Chart(ctx, config); // REFERENTE AO PIE CHART
+
+      var context = $("#chart-area").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+      window.myPie = new Chart(context, config); // REFERENTE AO PIE CHART
 
     }
 
     $(".filter").change(function(){
-      filtra_data();
-      mostra_grafico();
-    });  
-
-    $(document).ready(function(){
-      filtra_data();
-      mostra_grafico();
+      var edicao = $("#filterEdicao option:selected").attr("value");
+      $.ajax({
+          type: "POST",
+          url: "{% url 'projetos_fechados' %}",
+          data: {
+              edicao: edicao,
+              'csrfmiddlewaretoken': '{{ csrf_token }}',
+          },
+          success: function(response){
+              $("div.projetos").replaceWith($("div.projetos",response));
+              carrega_pagina();
+          },
+          error: function(response) {
+              console.log('error')
+          }
+      });
     });
-  
+
   </script>
 
 {% endblock %}
