--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -6,15 +6,15 @@
 {% endcomment %}
 
 {% block head %}
+
   {% load static %}
   {% comment %}{% load aderencia_aluno %}{% endcomment %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+  
   <script src="{% static 'js/w3.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+
+  {% comment %} Para chamar os Tooltips {% endcomment %}
+  <script src="{% static 'js/tooltip.js' %}"/></script>
+
 {% endblock %}
 
 {% block content %}
