--- a/projetos/templates/projetos/propostas_lista.html
+++ b/projetos/templates/projetos/propostas_lista.html
@@ -6,15 +6,15 @@
 {% endcomment %}
 
 {% block head %}
+
   {% load static %}
   {% load aderencia_aluno %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+  
   <script src="{% static 'js/w3.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+
+  {% comment %} Para chamar os Tooltips {% endcomment %}
+  <script src="{% static 'js/tooltip.js' %}"/></script>
+
   <script>
     var publicados = 0
     var fechados = 0
