--- a/users/templates/users/alunos_inscritos.html
+++ b/users/templates/users/alunos_inscritos.html
@@ -6,16 +6,16 @@
 {% endcomment %}
 
 {% block head %}
+
   {% load static %}
   {% load aderencia_aluno %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
+
+  {% comment %} Para chamar os Tooltips {% endcomment %}
+  <script src="{% static 'js/tooltip.js' %}"/></script>
+
 {% endblock %}
 
 {% block content %}
