--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -11,7 +11,7 @@
   {% load aderencia_aluno %}
   
   {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
   
   <style>
 
