--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -10,7 +10,7 @@
   {% load static %}
   
   {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
 
 {% endblock %}
 
