--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -13,7 +13,7 @@
   <script src="{% static 'js/w3.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
 
 {% endblock %}
 
