--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -8,7 +8,7 @@
 {% block head %}
   {% load static %}
   {% load class_tag %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
 {% endblock %}
 
 {% block content %}
