--- a/projetos/templates/projetos/conceitos_obtidos.html
+++ b/projetos/templates/projetos/conceitos_obtidos.html
@@ -27,7 +27,7 @@
     tr:nth-child(even) {background-color: #f2f2f2;}
   </style>
 
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
 
   <script>
 
