--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -25,7 +25,7 @@
     <script src="{% static 'popper-1.16.1/popper.min.js' %}"></script>
     
     {% comment %} Para chamar os Tooltips {% endcomment %}
-    <script src="{% static 'js/tooltip.js' %}"/></script>
+    <script>{% include "tooltip.js" %}</script>
 
 {% endblock %}
 
