--- a/projetos/templates/projetos/encontros.html
+++ b/projetos/templates/projetos/encontros.html
@@ -7,7 +7,7 @@
 
 {% block head %}
     {% load static %}
-    <script src="{% static 'js/tooltip.js' %}"/></script>
+    <script>{% include "tooltip.js" %}</script>
 {% endblock %}
 
 {% block content %}
