--- a/projetos/templates/projetos/graficos.html
+++ b/projetos/templates/projetos/graficos.html
@@ -14,7 +14,7 @@
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
+  <script>{% include "tooltip.js" %}</script>
 
 {% endblock %}
 
