--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -14,9 +14,7 @@
   <script src="{% static 'js/w3.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
-  <script src="{% static 'js/tooltip.js' %}"/></script>
-
-  </script>
+  <script>{% include "tooltip.js" %}</script>
   
   <style>
 
