--- a/projetos/templates/projetos/bancas_editar.html
+++ b/projetos/templates/projetos/bancas_editar.html
@@ -48,16 +48,43 @@
 
       <br>
       Tipo de banca:<br>
-      &nbsp;&nbsp;<input id="tipo0" type="radio" name="tipo" value="0" {% if banca.tipo_de_banca == 0 %}checked{% endif %}> <label for="tipo0">Final</label><br>
-      &nbsp;&nbsp;<input id="tipo1" type="radio" name="tipo" value="1" {% if banca.tipo_de_banca == 1 %}checked{% endif %}>  <label for="tipo1">Intermediária</label><br>
+      {% for numero, texto in TIPO_DE_BANCA %}
+        &nbsp;&nbsp;<input class="tipo_banca" id="tipo{{numero}}" type="radio" name="tipo" value="{{numero}}" {% if banca.tipo_de_banca == numero %}checked{% endif %} required> <label for="tipo{{numero}}">{{texto}}</label><br>
+      {% endfor %}
 
       <br>
-      {{banca.startDate|date:'Y-m-d\TH:i:s'}}A
-      <div > 
-        <label for="inicio">Inicio:</label> <input id="inicio" type="datetime-local" name="inicio" value="{{banca.startDate|date:'Y-m-d\TH:i:s'}}">
+      <div> 
+        <label for="inicio">Inicio:</label> <input id="inicio" type="datetime-local" name="inicio" value="{{banca.startDate|date:'Y-m-d\TH:i:s'}}" required>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="inicio">Fim:</label> <input id="fim" type="datetime-local" name="fim" value="{{banca.endDate|date:'Y-m-d\TH:i:s'}}">
+        <label for="inicio">Fim:</label> <input id="fim" type="datetime-local" name="fim" value="{{banca.endDate|date:'Y-m-d\TH:i:s'}}" required>
       </div><br>
+
+      <script>
+        // https://webreflection.medium.com/using-the-input-datetime-local-9503e7efdce
+        Date.prototype.toDatetimeLocal =
+          function toDatetimeLocal() {
+            var
+              date = this,
+              ten = function (i) {
+                return (i < 10 ? '0' : '') + i;
+              },
+              YYYY = date.getFullYear(),
+              MM = ten(date.getMonth() + 1),
+              DD = ten(date.getDate()),
+              HH = ten(date.getHours()),
+              II = ten(date.getMinutes()),
+              SS = ten(date.getSeconds())
+            ;
+            return YYYY + '-' + MM + '-' + DD + 'T' +
+                    HH + ':' + II + ':' + SS;
+          };
+
+        $("#inicio").change(function() {
+          var data = new Date($(this).val());
+          data.setHours(data.getHours() + 2);
+          $("#fim").val(data.toDatetimeLocal());
+        });
+      </script>
 
       <label for="local">Local:</label> <input id="local" name="local" type="text" size="48" value="{{banca.location}}"/><br>
       <br>
@@ -66,34 +93,25 @@
       <br>
 
       <label for="membro1">Membro 1 da Banca:</label>
-      <select name="membro1" id="membro1" title="Selecione membro da banca">
-          <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in pessoas %}
-            <option value="{{professor.id}}" {% if professor.id == banca.membro1.id %}selected{% endif %}>
-              {{professor}}
-            </option>  
-          {% endfor %}
+      <select name="membro1" class="pessoas" id="membro1" title="Selecione membro da banca" required
+        oninvalid="this.setCustomValidity('Selecione ao menos duas pessoas para a banca')"
+        oninput="this.setCustomValidity('')"
+        >
+          <option disabled selected value> -- selecione membro da banca -- </option>
       </select><br>
 
       <label for="membro2">Membro 2 da Banca:</label>
-      <select name="membro2" id="membro2" title="Selecione membro da banca">
-          <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in pessoas %}
-            <option value="{{professor.id}}" {% if professor.id == banca.membro2.id %}selected{% endif %}>
-              {{professor}}
-            </option>  
-          {% endfor %}
+      <select name="membro2" class="pessoas" id="membro2" title="Selecione membro da banca" required
+        oninvalid="this.setCustomValidity('Selecione ao menos duas pessoas para a banca')"
+        oninput="this.setCustomValidity('')"
+        >
+          <option disabled selected value> -- selecione membro da banca -- </option>
       </select><br>
 
       <label for="membro3">Membro 3 da Banca:</label>
-      <select name="membro3" id="membro3" title="Selecione membro da banca">
-          <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in pessoas %}
-            <option value="{{professor.id}}" {% if professor.id == banca.membro3.id %}selected{% endif %}>
-              {{professor}}
-            </option>  
-          {% endfor %}
-      </select><br>
+      <select name="membro3" class="pessoas" id="membro3" title="Selecione membro da banca">
+          <option disabled selected value> -- selecione membro da banca -- </option>
+      </select><br> 
 
       <br><br>
       <button type="submit">Agendar</button>
@@ -103,5 +121,42 @@
     <p>Não existem projetos disponíveis para marcar uma banca.</p>
   {% endif %}
   <p>&nbsp;</p>
+
+  <script>
+
+    function carrega_pagina(){
+      $('.pessoas').empty();
+      
+      {% comment %} Preenche com as pessas possíveis conforme o tipo de banca {% endcomment %}
+      var tipo = $("input[name='tipo']:checked").val();
+      if (tipo==2) {
+        $('.pessoas').append($("<option disabled selected value></option>").text("-- selecione membro da banca --"));
+        {% for pessoa in falconis %}
+          $('.pessoas').append($("<option></option>").attr("value",{{pessoa.id}}).text("{{pessoa}}"));
+        {% endfor %}
+      } else {
+        $('.pessoas').append($("<option disabled selected value></option>").text("-- selecione membro da banca --"));
+        {% for professor in professores %}
+          $('.pessoas').append($("<option></option>").attr("value",{{professor.id}}).text("{{professor}}"));
+        {% endfor %}
+      }
+
+      {% if banca and banca.membro1 %}
+        $('#membro1 option[value={{banca.membro1.id}}]').attr('selected','selected');
+      {% endif %}
+      {% if banca and banca.membro2 %}
+        $('#membro2 option[value={{banca.membro2.id}}]').attr('selected','selected');
+      {% endif %}
+      {% if banca and banca.membro3 %}
+        $('#membro3 option[value={{banca.membro3.id}}]').attr('selected','selected');
+      {% endif %}
+
+    }
+
+    window.onload = carrega_pagina
+
+    $(".tipo_banca").change(carrega_pagina);
+
+  </script>
 
 {% endblock %}
